# doeskit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  Makefile  README.md  platform.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  seed.json
backend/src/: db.rs  lib.rs  main.rs  models.rs  notifications.rs  routes.rs
db/migrations/: 001_create_tables.sql  002_push_subscriptions.sql  002_type_brand_model.sql  003_split_logs.sql  004_rename_whey_to_post_protein.sql  005_type_active_flag.sql  006_split_serving_size.sql  007_normalize_brands.sql
db/migrations/rollback/: 001_create_tables.sql  002_type_brand_model.sql  003_split_logs.sql  004_rename_whey_to_post_protein.sql  005_type_active_flag.sql  006_split_serving_size.sql  007_normalize_brands.sql
db/migrations/seed/: 001_supplements.sql
docs/: ARCHITECTURE.md  summary.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.module.css  App.tsx  auth.ts  config.ts  index.css  main.tsx
frontend/src/components/: EnergyCard.tsx  EnergyPeriod.module.css  EnergyPeriod.tsx  ScoreSelector.module.css  ScoreSelector.tsx  SleepCard.tsx  SupplementRow.module.css  SupplementRow.tsx  SupplementsSection.module.css  SupplementsSection.tsx  TodayHeader.module.css  TodayHeader.tsx  TypeRow.tsx  WorkoutCard.module.css  WorkoutCard.tsx
infrastructure/terraform/: dosekit.tf  locals.tf  main.tf  outputs.tf
scripts/: build-lambda.sh  deploy.sh  ensure-state-bucket.sh
(+22 files in other folders)
